--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 
 {% block body %}
 
-<h1 id="mainheader"> Expeditions </h1>
-<h1 id="mainmainheader"> Expeditions </h1>
+<h1 id="mainheader" style="text-align: center"> Expeditions </h1>
+    <!--<h1 id="mainmainheader"> Expeditions </h1>-->
 
-<h1 id="missionstatement"> Mission</br>Statement </h1>
+<h1 id="missionstatement" style="text-align: center"> Mission</br>Statement </h1>
 
-{#<img id="planeticket"src="/static/planeticket.png" height="800" width="300">#}
+    <!--<img id="planeticket"src="/static/planeticket.png" height="800" width="300">-->
 
-<p id="paragraph" style="text-align: center"> This is travel website that<br> makes travel simple  and efficient<br> for all. We have provided <br>
-many features such as<br>tabs for people that are <br> on vacation that organize<br> the person's stay<br> and
-to guide them to do what <br>they want to do at certain times.<br> Also, we have functions to show <br>restaurants
-nearby, a form of an<br> itinerary, places to go,<br> and Hotels near their locations<br>
+    <p id="paragraph" style="text-align: center"> This is travel website that makes travel simple  and efficient for all. We have provided
+    many features such as tabs for people that are on vacation that organize the person's stay and
+    to guide them to do what they want to do at certain times. Also, we have functions to show restaurants
+    nearby, a form of an itinerary, places to go, and Hotels near their locations.
 
 <!--<div id=container>-->
 <!--    Travel-->
