--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <!-- Setting up variables to customize "project" details to be specific to kangaroos -->
 
 {% block body %}
-
-<h1 id="mainheader" style="text-align: center"> Expeditions </h1>
+{#    comment the next line out after fixing the index#}
+<body style="background-color: pink">
+    <h1 id="mainheader" style="text-align: center"> Expeditions </h1>
     <!--<h1 id="mainmainheader"> Expeditions </h1>-->
 
-<h1 id="missionstatement" style="text-align: center"> Mission</br>Statement </h1>
+    <h1 id="missionstatement" style="text-align: center"> Mission Statement </h1>
 
     <!--<img id="planeticket"src="/static/planeticket.png" height="800" width="300">-->
 
@@ -16,6 +17,8 @@
     many features such as tabs for people that are on vacation that organize the person's stay and
     to guide them to do what they want to do at certain times. Also, we have functions to show restaurants
     nearby, a form of an itinerary, places to go, and Hotels near their locations.
+</body>
+
 
 <!--<div id=container>-->
 <!--    Travel-->
